# baxter_simulator

./: .gitignore  CHANGELOG.rst  Dockerfile  LICENSE  README.md  README.rst  baxter_simulator.rosinstall  baxter_spoof.sh
baxter_control/: CMakeLists.txt  package.xml
baxter_control/config/: baxter_controllers.yaml
baxter_control/include/baxter_control/: baxter_enable.h  baxter_utilities.h
baxter_control/launch/: baxter_sdk_control.launch  baxter_sdk_position_rqt.launch  baxter_sdk_position_rqt.perspective  baxter_sdk_velocity_rqt.launch  baxter_sdk_velocity_rqt.perspective
baxter_control/scripts/: sonar_enable.py
baxter_control/src/: baxter_enable.cpp
baxter_controllers/: CMakeLists.txt  baxter_controllers_plugins.xml  package.xml
baxter_controllers/include/baxter_controllers/: baxter_effort_controller.h  baxter_gripper_controller.h  baxter_head_controller.h  baxter_position_controller.h  baxter_velocity_controller.h
baxter_controllers/src/: baxter_effort_controller.cpp  baxter_gripper_controller.cpp  baxter_head_controller.cpp  baxter_position_controller.cpp  baxter_velocity_controller.cpp
baxter_gazebo/: CMakeLists.txt  package.xml
baxter_gazebo/documentation/: baxter_simulation.odg
baxter_gazebo/launch/: baxter_world.launch
baxter_gazebo/src/: baxter_gazebo_ros_control_plugin.cpp
baxter_gazebo/worlds/: baxter.world  baxter_gas_station.world  baxter_plugin.urdf  camera.gazebo  camera.urdf  camera.xacro
baxter_kinematics/: CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
baxter_kinematics/config/: baxter_kinematics.launch  baxter_kinematics.yaml  planning_groups.yaml
baxter_kinematics/include/: ArmKinematics.h~  PositionKinematicsNode.h  PositionKinematicsNode.h~  PositionKinematicsNode_mcmsgs.h  arm_kinematics.h  arm_kinematics.h~  arm_kinematics_mcmsgs.h  baxter_kinematics.h~
baxter_kinematics/launch/: baxter_kinematics.launch  baxter_kinematics.launch~
baxter_kinematics/src/: KinematicsTools.cpp~  PositionKinematicsNode.cpp  PositionKinematicsNode.cpp~  PositionKinematicsNode_mcmsgs.cpp  arm_kinematics.cpp  arm_kinematics.cpp~  arm_kinematics_mcmsgs.cpp  arm_kinematics_mcmsgs.cpp~  baxter_kinematics.cpp~
baxter_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
baxter_moveit_config/config/: baxter.srdf  baxter_controllers.yaml  joint_limits.yaml  joint_limits.yaml.slow  kinematics.yaml  ompl_planning.yaml
baxter_moveit_config/launch/: baxter_bringup.launch  baxter_bringup.launch~  baxter_moveit_controller_manager.launch  baxter_planning_execution.launch  default_warehouse_db.launch  demo.launch  demo_baxter.launch  demo_sim.launch  move_group.launch  moveit.rviz  moveit_rviz.launch  ompl_planning_pipeline.launch  planning_context.launch  planning_pipeline.launch  run_benchmark_ompl.launch  sensor_manager.launch  setup_assistant.launch  trajectory_execution.launch  warehouse.launch
baxter_sim_controllers/: CMakeLists.txt  package.xml
baxter_sim_controllers/config/: baxter_sim_controllers_plugins.xml
baxter_sim_controllers/include/baxter_sim_controllers/: baxter_effort_controller.h  baxter_gripper_controller.h  baxter_head_controller.h  baxter_position_controller.h  baxter_velocity_controller.h
baxter_sim_controllers/src/: baxter_effort_controller.cpp  baxter_gripper_controller.cpp  baxter_head_controller.cpp  baxter_position_controller.cpp  baxter_velocity_controller.cpp
baxter_sim_examples/: CMakeLists.txt  package.xml
baxter_sim_examples/launch/: baxter_pick_and_place_demo.launch
baxter_sim_examples/models/block/: model.urdf
baxter_sim_examples/scripts/: ik_pick_and_place_demo.py
baxter_sim_hardware/: CMakeLists.txt  package.xml
baxter_sim_hardware/config/: baxter_left_electric_gripper_controller.yaml  baxter_right_electric_gripper_controller.yaml  baxter_sim_controllers.yaml
baxter_sim_hardware/include/baxter_sim_hardware/: baxter_emulator.h
baxter_sim_hardware/launch/: baxter_sdk_control.launch  baxter_sdk_position_rqt.launch  baxter_sdk_position_rqt.perspective  baxter_sdk_velocity_rqt.launch  baxter_sdk_velocity_rqt.perspective
baxter_sim_hardware/src/: baxter_emulator.cpp
baxter_sim_io/: CMakeLists.txt  package.xml
baxter_sim_io/include/baxter_sim_io/: baxter_io.hpp  main_window.hpp  qnode.hpp
baxter_sim_io/resources/: sim_io.qrc
baxter_sim_io/src/: baxter_io.cpp  main.cpp  main_window.cpp  qnode.cpp
baxter_sim_io/ui/: baxter_io.ui  main_window.ui
baxter_sim_kinematics/: CMakeLists.txt  package.xml
baxter_sim_kinematics/include/: arm_kinematics.h  position_kinematics.h
baxter_sim_kinematics/include/baxter_sim_kinematics/: arm_kinematics.h  position_kinematics.h
baxter_sim_kinematics/launch/: baxter_sim_kinematics.launch
baxter_sim_kinematics/src/: arm_kinematics.cpp  position_kinematics.cpp
baxter_simulator/: CMakeLists.txt  package.xml
qt_controls/: CMakeLists.txt  mainpage.dox  package.xml
qt_controls/include/qt_controls/: main_window.hpp  qnode.hpp
qt_controls/src/: main.cpp  main_window.cpp  qnode.cpp
qt_controls/ui/: main_window.ui
