<package>
  <name>baxter_controllers</name>
  <version>0.4.0</version>
  <description>baxter_controllers</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/baxter/wiki</url>
  <url type="bugtracker">https://github.com/davetcoleman/baxter/issues</url>
  <url type="repository">https://github.com/davetcoleman/baxter</url>

  <author>Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend> 
  <build_depend>control_toolbox</build_depend> 
  <build_depend>effort_controllers</build_depend> 
  <build_depend>baxter_core_msgs</build_depend>

  <run_depend>controller_interface</run_depend> 
  <run_depend>control_toolbox</run_depend> 
  <run_depend>effort_controllers</run_depend> 
  <run_depend>baxter_core_msgs</run_depend>

  <export>
    <controller_interface plugin="${prefix}/baxter_controllers_plugins.xml"/>
  </export>
</package>
