<?xml version="1.0"?>
<package>
  <name>baxter_controllers</name>
  <version>0.2.0</version>
  <description>
    Baxter specific controllers for Gazebo use
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://www.rethinkrobotics.com/sdk</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>
  <author>Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>controller_interface</build_depend>
  <build_depend>control_toolbox</build_depend>
  <build_depend>effort_controllers</build_depend>
  <build_depend>baxter_core_msgs</build_depend>

  <run_depend>controller_interface</run_depend>
  <run_depend>control_toolbox</run_depend>
  <run_depend>effort_controllers</run_depend>
  <run_depend>baxter_core_msgs</run_depend>

  <export>
    <controller_interface plugin="${prefix}/baxter_controllers_plugins.xml"/>
  </export>
</package>
