<package>
  <name>baxter_gazebo</name>
  <version>0.1.1</version>
  <description>baxter_gazebo</description>
  <maintainer email="davetcoleman@gmail.com">Dave Coleman</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/davetcoleman/baxter</url>
  <url type="bugtracker">https://github.com/davetcoleman/baxter/issues</url>
  <url type="repository">https://github.com/davetcoleman/baxter</url>

  <author email="davetcoleman@gmail.com">Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>  
  <build_depend>baxter_msgs</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>controller_manager_msgs</build_depend>

  <run_depend>roscpp</run_depend>  
  <run_depend>baxter_msgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>baxter_description</run_depend>
  <run_depend>baxter_control</run_depend> 
  <run_depend>gazebo_ros</run_depend> 
  <run_depend>baxter_description</run_depend> 
  
  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>