<?xml version="1.0"?>
<package>
  <name>baxter_gazebo</name>
  <version>1.2.12</version>
  <description>
    Baxter Gazebo plugins and launch files
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://sdk.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>
  <author>Dave Coleman</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>gazebo_ros_control</build_depend>
  <build_depend>controller_manager_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>controller_manager_msgs</run_depend>
  <run_depend>baxter_sim_hardware</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>baxter_description</run_depend>

  <export>
    <gazebo plugin_path="${prefix}/lib" gazebo_media_path="${prefix}" />
  </export>

</package>
