<?xml version="1.0"?>
<package>
  <name>baxter_sim_hardware</name>
  <version>1.2.12</version>
  <description>
    Publishes the state information and emulates few hardware interfaces for use with Baxter
    in Gazebo
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://sdk.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>
  <author>Hariharasudan Malaichamee</author>
  <author>Dave Coleman</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>baxter_sim_kinematics</build_depend>
  <build_depend>cmake_modules</build_depend>
  <build_depend>libopencv-dev</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>joint_state_controller</run_depend>
  <run_depend>baxter_sim_io</run_depend>
  <run_depend>baxter_sim_kinematics</run_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>joint_state_controller</run_depend>

</package>
