<?xml version="1.0"?>
<package>
  <name>baxter_sim_io</name>
  <version>0.1.0</version>
  <description>

     baxter_sim_io

  </description>
  <maintainer email="rsdk.support@rethinkrobotics.com">Rethink Robotics Inc.</maintainer>
  <author>Hariharasudan Malaichamee</author>
  <license>BSD</license>
  <!-- <url type="bugtracker">https://github.com/stonier/qt_ros/issues</url> -->
  <!-- <url type="repository">https://github.com/stonier/qt_ros</url> -->


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>qt_build</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>libqt4-dev</build_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <run_depend>qt_build</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>libqt4-dev</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
 
</package>
