<?xml version="1.0"?>
<package>
  <name>baxter_sim_kinematics</name>
  <version>1.2.12</version>
  <description>
    Baxter Kinematics for the FK, IK and the gravity compensation calculations
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://sdk.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_simulator
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>
  <author>Hariharasudan Malaichamee</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>baxter_core_msgs</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>

  <run_depend>std_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>baxter_core_msgs</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <run_depend>tf</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf_conversions</run_depend>

  <run_depend>kdl_parser</run_depend>

</package>


