<?xml version="1.0"?>
<package>
  <name>baxter_simulator</name>
  <version>1.2.12</version>
  <description>
    Metapackage - Baxter Research Robot Gazebo Simulation
  </description>

  <maintainer email="rsdk.support@rethinkrobotics.com">
    Rethink Robotics Inc.
  </maintainer>
  <license>BSD</license>
  <url type="website">http://sdk.rethinkrobotics.com</url>
  <url type="repository">
    https://github.com/RethinkRobotics/baxter_simultor
  </url>
  <url type="bugtracker">
    https://github.com/RethinkRobotics/baxter_simulator/issues
  </url>
  <author>Rethink Robotics Inc.</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>baxter_gazebo</run_depend>
  <run_depend>baxter_sim_controllers</run_depend>
  <run_depend>baxter_sim_examples</run_depend>
  <run_depend>baxter_sim_hardware</run_depend>
  <run_depend>baxter_sim_io</run_depend>
  <run_depend>baxter_sim_kinematics</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
